--- a/src/templates/routes/settings.njk
+++ b/src/templates/routes/settings.njk
@@ -1,17 +1,17 @@
 <div class="flex-ns">
-  <div class="flex-auto">
-    <div>
+  <div class="flex-auto pr1-ns">
+    <div class="bg-white pa3 ba b--moon-gray br2">
       {% include "templates/components/octave.njk" %}
     </div>
 
-    <div class="mt2">
+    <div class="mt2 bg-white pa3 ba b--moon-gray br2">
       {% include "templates/components/soundfont.njk" %}
     </div>
 
-    <div id="app"></div>
+    <div id="app" class="mt2 bg-white pa3 ba b--moon-gray br2"></div>
   </div>
 
-  <div class="flex-auto">
+  <div class="flex-auto pl1-ns">
     {% include "templates/components/envelope.njk" %}
   </div>
 </div>
