--- a/src/templates/components/piano-roll.njk
+++ b/src/templates/components/piano-roll.njk
@@ -1,31 +1,40 @@
-<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 616 162" class="piano-roll" aria-labelledby="piano-roll-title piano-roll-desc">
+<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 616 162" class="piano-roll bg-black" aria-labelledby="piano-roll-title piano-roll-desc">
   <title id="piano-roll-title">Piano Roll</title>
   <desc id="piano-roll-desc">A two octave piano keyboard.</desc>
 
-  <rect width="40" height="160" x="1"   y="1" class="piano-roll__key piano-roll__key--natural" tabindex="0" data-note="0" />
-  <rect width="40" height="160" x="42"  y="1" class="piano-roll__key piano-roll__key--natural" tabindex="0" data-note="2" />
-  <rect width="40" height="160" x="83"  y="1" class="piano-roll__key piano-roll__key--natural" tabindex="0" data-note="4" />
-  <rect width="40" height="160" x="124" y="1" class="piano-roll__key piano-roll__key--natural" tabindex="0" data-note="5" />
-  <rect width="40" height="160" x="165" y="1" class="piano-roll__key piano-roll__key--natural" tabindex="0" data-note="7" />
-  <rect width="40" height="160" x="206" y="1" class="piano-roll__key piano-roll__key--natural" tabindex="0" data-note="9" />
-  <rect width="40" height="160" x="247" y="1" class="piano-roll__key piano-roll__key--natural" tabindex="0" data-note="11" />
-  <rect width="40" height="160" x="288" y="1" class="piano-roll__key piano-roll__key--natural" tabindex="0" data-note="12" />
-  <rect width="40" height="160" x="329" y="1" class="piano-roll__key piano-roll__key--natural" tabindex="0" data-note="14" />
-  <rect width="40" height="160" x="370" y="1" class="piano-roll__key piano-roll__key--natural" tabindex="0" data-note="16" />
-  <rect width="40" height="160" x="411" y="1" class="piano-roll__key piano-roll__key--natural" tabindex="0" data-note="17" />
-  <rect width="40" height="160" x="452" y="1" class="piano-roll__key piano-roll__key--natural" tabindex="0" data-note="19" />
-  <rect width="40" height="160" x="493" y="1" class="piano-roll__key piano-roll__key--natural" tabindex="0" data-note="21" />
-  <rect width="40" height="160" x="534" y="1" class="piano-roll__key piano-roll__key--natural" tabindex="0" data-note="23" />
-  <rect width="40" height="160" x="575" y="1" class="piano-roll__key piano-roll__key--natural" tabindex="0" data-note="24" />
+  <defs>
+    <polygon id="left" points="0,0 29,0 29,81 40,81 40,160 0,160" />
+    <polygon id="middle" points="11,0 29,0 29,81 40,81 40,160 0,160 0,81 11,81" />
+    <polygon id="right" points="11,0 40,0 40,160 0,160 0,81 11,81" />
+    <rect id="full" width="40" height="160" />
+    <rect id="accidental" width="21" height="80" />
+  </defs>
 
-  <rect width="21" height="80" x="31"  y="1" class="piano-roll__key piano-roll__key--accidental" tabindex="0" data-note="1" />
-  <rect width="21" height="80" x="72"  y="1" class="piano-roll__key piano-roll__key--accidental" tabindex="0" data-note="3" />
-  <rect width="21" height="80" x="154" y="1" class="piano-roll__key piano-roll__key--accidental" tabindex="0" data-note="6" />
-  <rect width="21" height="80" x="195" y="1" class="piano-roll__key piano-roll__key--accidental" tabindex="0" data-note="8" />
-  <rect width="21" height="80" x="236" y="1" class="piano-roll__key piano-roll__key--accidental" tabindex="0" data-note="10" />
-  <rect width="21" height="80" x="318" y="1" class="piano-roll__key piano-roll__key--accidental" tabindex="0" data-note="13" />
-  <rect width="21" height="80" x="359" y="1" class="piano-roll__key piano-roll__key--accidental" tabindex="0" data-note="15" />
-  <rect width="21" height="80" x="441" y="1" class="piano-roll__key piano-roll__key--accidental" tabindex="0" data-note="18" />
-  <rect width="21" height="80" x="482" y="1" class="piano-roll__key piano-roll__key--accidental" tabindex="0" data-note="20" />
-  <rect width="21" height="80" x="523" y="1" class="piano-roll__key piano-roll__key--accidental" tabindex="0" data-note="22" />
+  <use xlink:href="#left" x="1"   y="1" class="pointer fill-white" tabindex="0" data-note="0" />
+  <use xlink:href="#accidental" x="31"  y="1" class="pointer fill-black" tabindex="0" data-note="1" />
+  <use xlink:href="#middle" x="42"  y="1" class="pointer fill-white" tabindex="0" data-note="2" />
+  <use xlink:href="#accidental" x="72"  y="1" class="pointer fill-black" tabindex="0" data-note="3" />
+  <use xlink:href="#right" x="83"  y="1" class="pointer fill-white" tabindex="0" data-note="4" />
+  <use xlink:href="#left" x="124" y="1" class="pointer fill-white" tabindex="0" data-note="5" />
+  <use xlink:href="#accidental" x="154" y="1" class="pointer fill-black" tabindex="0" data-note="6" />
+  <use xlink:href="#middle" x="165" y="1" class="pointer fill-white" tabindex="0" data-note="7" />
+  <use xlink:href="#accidental" x="195" y="1" class="pointer fill-black" tabindex="0" data-note="8" />
+  <use xlink:href="#middle" x="206" y="1" class="pointer fill-white" tabindex="0" data-note="9" />
+  <use xlink:href="#accidental" x="236" y="1" class="pointer fill-black" tabindex="0" data-note="10" />
+  <use xlink:href="#right" x="247" y="1" class="pointer fill-white" tabindex="0" data-note="11" />
+
+  <use xlink:href="#left" x="288" y="1" class="pointer fill-white" tabindex="0" data-note="12" />
+  <use xlink:href="#accidental" x="318" y="1" class="pointer fill-black" tabindex="0" data-note="13" />
+  <use xlink:href="#middle" x="329" y="1" class="pointer fill-white" tabindex="0" data-note="14" />
+  <use xlink:href="#accidental" x="359" y="1" class="pointer fill-black" tabindex="0" data-note="15" />
+  <use xlink:href="#right" x="370" y="1" class="pointer fill-white" tabindex="0" data-note="16" />
+
+  <use xlink:href="#left" x="411" y="1" class="pointer fill-white" tabindex="0" data-note="17" />
+  <use xlink:href="#accidental" x="441" y="1" class="pointer fill-black" tabindex="0" data-note="18" />
+  <use xlink:href="#middle" x="452" y="1" class="pointer fill-white" tabindex="0" data-note="19" />
+  <use xlink:href="#accidental" x="482" y="1" class="pointer fill-black" tabindex="0" data-note="20" />
+  <use xlink:href="#middle" x="493" y="1" class="pointer fill-white" tabindex="0" data-note="21" />
+  <use xlink:href="#accidental" x="523" y="1" class="pointer fill-black" tabindex="0" data-note="22" />
+  <use xlink:href="#right" x="534" y="1" class="pointer fill-white" tabindex="0" data-note="23" />
+  <use xlink:href="#full" x="575" y="1" class="pointer fill-white" tabindex="0" data-note="24" />
 </svg>
