Update layout to remove flicker when changing views

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -16,6 +16,7 @@
 @import url("../../node_modules/tachyons/src/_heights.css");
 @import url("../../node_modules/tachyons/src/_links.css");
 @import url("../../node_modules/tachyons/src/_lists.css");
+@import url("../../node_modules/tachyons/src/_position.css");
 @import url("../../node_modules/tachyons/src/_spacing.css");
 @import url("../../node_modules/tachyons/src/_skins.css");
 @import url("../../node_modules/tachyons/src/_skins-pseudo.css");
