--- a/src/index.njk
+++ b/src/index.njk
@@ -3,7 +3,7 @@
 {% block content %}
 
 {% for route in routes %}
-  <div id="{{ route.path }}" class="view">
+  <div id="{{ route.path }}" class="view pt5">
     {% include "templates/routes/" + route.path + ".njk" ignore missing %}
   </div>
 {% endfor %}
