Update styles to account for midi devices

--- a/src/templates/base.njk
+++ b/src/templates/base.njk
@@ -51,7 +51,7 @@
     {% endblock %}
   </main>
 
-  <footer class="ph4 mh2 bt bg-white b--moon-gray" role="contentinfo">
+  <footer class="ph2 mt2 bt bg-white b--moon-gray" role="contentinfo">
     <p>A <a class="color-inherit hover-green" href="https://github.com/sccherry/soundfont">project</a> by <a class="color-inherit hover-green" href="https://stevecherry.net">Steve Cherry</a>.</p>
   </footer>
 
