Hide midi card if midi device is unavailable

--- a/src/templates/routes/settings.njk
+++ b/src/templates/routes/settings.njk
@@ -8,7 +8,7 @@
       {% include "templates/components/soundfont.njk" %}
     </div>
 
-    <div id="app" class="mt2 bg-white pa3 ba b--moon-gray br2"></div>
+    <div id="app"></div>
   </div>
 
   <div class="flex-auto pl1-ns">
