Copy Tachyons files and only include used styles

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1,28 +1,26 @@
 @charset "utf-8";
 
+@import url("./base/variables.css");
 @import url("./base/normalize.css");
 
-@import url("../../node_modules/tachyons/src/_media-queries.css");
-@import url("../../node_modules/tachyons/src/_colors.css");
-
-@import url("../../node_modules/tachyons/src/_borders.css");
-@import url("../../node_modules/tachyons/src/_border-colors.css");
-@import url("../../node_modules/tachyons/src/_border-radius.css");
-@import url("../../node_modules/tachyons/src/_clears.css");
-@import url("../../node_modules/tachyons/src/_display.css");
-@import url("../../node_modules/tachyons/src/_flexbox.css");
-@import url("../../node_modules/tachyons/src/_floats.css");
-@import url("../../node_modules/tachyons/src/_font-family.css");
-@import url("../../node_modules/tachyons/src/_heights.css");
-@import url("../../node_modules/tachyons/src/_links.css");
-@import url("../../node_modules/tachyons/src/_lists.css");
-@import url("../../node_modules/tachyons/src/_position.css");
-@import url("../../node_modules/tachyons/src/_spacing.css");
-@import url("../../node_modules/tachyons/src/_skins.css");
-@import url("../../node_modules/tachyons/src/_skins-pseudo.css");
-@import url("../../node_modules/tachyons/src/_type-scale.css");
-@import url("../../node_modules/tachyons/src/_widths.css");
-
+@import url("./utilities/border-colors.css");
+@import url("./utilities/border-radius.css");
+@import url("./utilities/borders.css");
+@import url("./utilities/display.css");
+@import url("./utilities/flexbox.css");
+@import url("./utilities/font-family.css");
+@import url("./utilities/font-weight.css");
+@import url("./utilities/heights.css");
+@import url("./utilities/hovers.css");
+@import url("./utilities/links.css");
+@import url("./utilities/lists.css");
+@import url("./utilities/position.css");
+@import url("./utilities/skins-pseudo.css");
+@import url("./utilities/skins.css");
+@import url("./utilities/spacing.css");
 @import url("./utilities/svg.css");
+@import url("./utilities/type-scale.css");
+@import url("./utilities/widths.css");
+
 @import url("./components/piano-roll.css");
 @import url("./components/view.css");
