--- a/src/templates/base.njk
+++ b/src/templates/base.njk
@@ -33,7 +33,7 @@
   <link rel="canonical" href="https://stevecherry.net/soundfont/">
 </head>
 <body class="sans-serif flex flex-column min-vh-100 ma0 bg-near-white">
-  <header class="flex items-center justify-between pv2 white bg-green fixed w-100-ns" role="banner">
+  <header class="flex items-center justify-between pv2 white bg-green fixed w-100" role="banner">
     <h1 class="f4 mv0 ml2">Soundfont</h1>
 
     <nav class="mr2" role="navigation">
