--- a/src/templates/components/envelope.njk
+++ b/src/templates/components/envelope.njk
@@ -1,5 +1,5 @@
 <fieldset class="bg-white pa3 ba b--moon-gray br2">
-  <div class="f4 bold">
+  <div class="f4 b">
     <legend>Envelope</legend>
   </div>
 
