--- a/src/templates/components/octave.njk
+++ b/src/templates/components/octave.njk
@@ -1,4 +1,4 @@
-<label class="db f4 bold mb3" for="octave">Octave</label>
+<label class="db f4 b mb3" for="octave">Octave</label>
 <select id="octave" class="w-100" name="octave">
   {% for option in [2, 3, 4, 5, 6, 7] %}
     <option value="{{ option }}"{% if option == initialState.octave %} selected{% endif %}>{{ option }}</option>
