Add CNAME record

--- a/src/templates/base.njk
+++ b/src/templates/base.njk
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <script>
-    var host = 'stevecherry.net';
+    var host = 'sf.stevecherry.net';
 
     if ((host === window.location.host) && (window.location.protocol !== 'https:')) {
       window.location.protocol = 'https';
