--- a/src/templates/routes/settings.njk
+++ b/src/templates/routes/settings.njk
@@ -1,15 +1,15 @@
 <div class="flex-ns">
   <div class="flex-auto pr1-ns">
     <div class="bg-white pa3 ba b--moon-gray br2">
-      {% include "templates/components/octave.njk" %}
+      {% include "components/octave.njk" %}
     </div>
 
     <div class="mt2 bg-white pa3 ba b--moon-gray br2">
-      {% include "templates/components/soundfont.njk" %}
+      {% include "components/soundfont.njk" %}
     </div>
   </div>
 
   <div class="flex-auto pl1-ns">
-    {% include "templates/components/envelope.njk" %}
+    {% include "components/envelope.njk" %}
   </div>
 </div>
