--- a/src/templates/components/piano-roll.njk
+++ b/src/templates/components/piano-roll.njk
@@ -10,31 +10,31 @@
     <rect id="accidental" width="21" height="80" />
   </defs>
 
-  <use xlink:href="#left" x="1"   y="1" class="pointer fill-white" tabindex="0" data-note="0" />
-  <use xlink:href="#accidental" x="31"  y="1" class="pointer fill-black" tabindex="0" data-note="1" />
-  <use xlink:href="#middle" x="42"  y="1" class="pointer fill-white" tabindex="0" data-note="2" />
-  <use xlink:href="#accidental" x="72"  y="1" class="pointer fill-black" tabindex="0" data-note="3" />
-  <use xlink:href="#right" x="83"  y="1" class="pointer fill-white" tabindex="0" data-note="4" />
-  <use xlink:href="#left" x="124" y="1" class="pointer fill-white" tabindex="0" data-note="5" />
-  <use xlink:href="#accidental" x="154" y="1" class="pointer fill-black" tabindex="0" data-note="6" />
-  <use xlink:href="#middle" x="165" y="1" class="pointer fill-white" tabindex="0" data-note="7" />
-  <use xlink:href="#accidental" x="195" y="1" class="pointer fill-black" tabindex="0" data-note="8" />
-  <use xlink:href="#middle" x="206" y="1" class="pointer fill-white" tabindex="0" data-note="9" />
-  <use xlink:href="#accidental" x="236" y="1" class="pointer fill-black" tabindex="0" data-note="10" />
-  <use xlink:href="#right" x="247" y="1" class="pointer fill-white" tabindex="0" data-note="11" />
+  <use xlink:href="#left" x="1"   y="1" class="hover:cursor-pointer fill-current text-white" tabindex="0" data-note="0" />
+  <use xlink:href="#accidental" x="31"  y="1" class="hover:cursor-pointer fill-current text-black" tabindex="0" data-note="1" />
+  <use xlink:href="#middle" x="42"  y="1" class="hover:cursor-pointer fill-current text-white" tabindex="0" data-note="2" />
+  <use xlink:href="#accidental" x="72"  y="1" class="hover:cursor-pointer fill-current text-black" tabindex="0" data-note="3" />
+  <use xlink:href="#right" x="83"  y="1" class="hover:cursor-pointer fill-current text-white" tabindex="0" data-note="4" />
+  <use xlink:href="#left" x="124" y="1" class="hover:cursor-pointer fill-current text-white" tabindex="0" data-note="5" />
+  <use xlink:href="#accidental" x="154" y="1" class="hover:cursor-pointer fill-current text-black" tabindex="0" data-note="6" />
+  <use xlink:href="#middle" x="165" y="1" class="hover:cursor-pointer fill-current text-white" tabindex="0" data-note="7" />
+  <use xlink:href="#accidental" x="195" y="1" class="hover:cursor-pointer fill-current text-black" tabindex="0" data-note="8" />
+  <use xlink:href="#middle" x="206" y="1" class="hover:cursor-pointer fill-current text-white" tabindex="0" data-note="9" />
+  <use xlink:href="#accidental" x="236" y="1" class="hover:cursor-pointer fill-current text-black" tabindex="0" data-note="10" />
+  <use xlink:href="#right" x="247" y="1" class="hover:cursor-pointer fill-current text-white" tabindex="0" data-note="11" />
 
-  <use xlink:href="#left" x="288" y="1" class="pointer fill-white" tabindex="0" data-note="12" />
-  <use xlink:href="#accidental" x="318" y="1" class="pointer fill-black" tabindex="0" data-note="13" />
-  <use xlink:href="#middle" x="329" y="1" class="pointer fill-white" tabindex="0" data-note="14" />
-  <use xlink:href="#accidental" x="359" y="1" class="pointer fill-black" tabindex="0" data-note="15" />
-  <use xlink:href="#right" x="370" y="1" class="pointer fill-white" tabindex="0" data-note="16" />
+  <use xlink:href="#left" x="288" y="1" class="hover:cursor-pointer fill-current text-white" tabindex="0" data-note="12" />
+  <use xlink:href="#accidental" x="318" y="1" class="hover:cursor-pointer fill-current text-black" tabindex="0" data-note="13" />
+  <use xlink:href="#middle" x="329" y="1" class="hover:cursor-pointer fill-current text-white" tabindex="0" data-note="14" />
+  <use xlink:href="#accidental" x="359" y="1" class="hover:cursor-pointer fill-current text-black" tabindex="0" data-note="15" />
+  <use xlink:href="#right" x="370" y="1" class="hover:cursor-pointer fill-current text-white" tabindex="0" data-note="16" />
 
-  <use xlink:href="#left" x="411" y="1" class="pointer fill-white" tabindex="0" data-note="17" />
-  <use xlink:href="#accidental" x="441" y="1" class="pointer fill-black" tabindex="0" data-note="18" />
-  <use xlink:href="#middle" x="452" y="1" class="pointer fill-white" tabindex="0" data-note="19" />
-  <use xlink:href="#accidental" x="482" y="1" class="pointer fill-black" tabindex="0" data-note="20" />
-  <use xlink:href="#middle" x="493" y="1" class="pointer fill-white" tabindex="0" data-note="21" />
-  <use xlink:href="#accidental" x="523" y="1" class="pointer fill-black" tabindex="0" data-note="22" />
-  <use xlink:href="#right" x="534" y="1" class="pointer fill-white" tabindex="0" data-note="23" />
-  <use xlink:href="#full" x="575" y="1" class="pointer fill-white" tabindex="0" data-note="24" />
+  <use xlink:href="#left" x="411" y="1" class="hover:cursor-pointer fill-current text-white" tabindex="0" data-note="17" />
+  <use xlink:href="#accidental" x="441" y="1" class="hover:cursor-pointer fill-current text-black" tabindex="0" data-note="18" />
+  <use xlink:href="#middle" x="452" y="1" class="hover:cursor-pointer fill-current text-white" tabindex="0" data-note="19" />
+  <use xlink:href="#accidental" x="482" y="1" class="hover:cursor-pointer fill-current text-black" tabindex="0" data-note="20" />
+  <use xlink:href="#middle" x="493" y="1" class="hover:cursor-pointer fill-current text-white" tabindex="0" data-note="21" />
+  <use xlink:href="#accidental" x="523" y="1" class="hover:cursor-pointer fill-current text-black" tabindex="0" data-note="22" />
+  <use xlink:href="#right" x="534" y="1" class="hover:cursor-pointer fill-current text-white" tabindex="0" data-note="23" />
+  <use xlink:href="#full" x="575" y="1" class="hover:cursor-pointer fill-current text-white" tabindex="0" data-note="24" />
 </svg>
