--- a/src/templates/routes/settings.njk
+++ b/src/templates/routes/settings.njk
@@ -1,15 +1,15 @@
-<div class="flex-ns">
-  <div class="flex-auto pr1-ns">
-    <div class="bg-white pa3 ba b--moon-gray br2">
+<div class="sm:flex">
+  <div class="flex-auto sm:pr-1">
+    <div class="bg-white p-3 border border-solid border-gray-400 rounded">
       {% include "components/octave.njk" %}
     </div>
 
-    <div class="mt2 bg-white pa3 ba b--moon-gray br2">
+    <div class="mt-2 bg-white p-3 border border-solid border-gray-400 rounded">
       {% include "components/soundfont.njk" %}
     </div>
   </div>
 
-  <div class="flex-auto pl1-ns">
+  <div class="flex-auto pl-1-ns">
     {% include "components/envelope.njk" %}
   </div>
 </div>
