--- a/src/_layouts/default.njk
+++ b/src/_layouts/default.njk
@@ -13,35 +13,35 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <title>Soundfont</title>
-  <meta name="description" content="A soundfont player.">
+  <title>{{ siteData.name | capitalize }}</title>
+  <meta name="description" content="{{ siteData.description }}">
 
   <meta name="mobile-web-app-capable" content="yes">
-  <meta name="application-name" content="Soundfont">
+  <meta name="application-name" content="{{ siteData.name | capitalize }}">
 
   <meta name="apple-mobile-web-app-capable" content="yes">
-  <meta name="apple-mobile-web-app-title" content="Soundfont">
-  <link rel="apple-touch-startup-image" href="./assets/android-chrome-192x192.png">
+  <meta name="apple-mobile-web-app-title" content="{{ siteData.name | capitalize }}">
+  <link rel="apple-touch-startup-image" href="{{ '/assets/android-chrome-192x192.png' | url }}">
 
-  <link rel="apple-touch-icon" sizes="180x180" href="./assets/apple-touch-icon.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="./assets/favicon-16x16.png">
-  <link rel="manifest" href="./site.webmanifest">
-  <link rel="mask-icon" href="./assets/safari-pinned-tab.svg" color="#2b8a3e">
-  <link rel="shortcut icon" href="./assets/favicon.ico">
-  <meta name="msapplication-TileColor" content="#2b8a3e">
-  <meta name="msapplication-config" content="./browserconfig.xml">
-  <meta name="theme-color" content="#2b8a3e">
+  <link rel="apple-touch-icon" sizes="180x180" href="{{ '/assets/apple-touch-icon.png' | url }}">
+  <link rel="icon" type="image/png" sizes="32x32" href="{{ '/assets/favicon-32x32.png' | url }}">
+  <link rel="icon" type="image/png" sizes="16x16" href="{{ '/assets/favicon-16x16.png' | url }}">
+  <link rel="manifest" href="{{ '/site.webmanifest' | url }}">
+  <link rel="mask-icon" href="./assets/safari-pinned-tab.svg" color="{{ siteData.color }}">
+  <link rel="shortcut icon" href="{{ '/assets/favicon.ico' | url }}">
+  <meta name="msapplication-TileColor" content="{{ siteData.color }}">
+  <meta name="msapplication-config" content="{{ '/browserconfig.xml' | url }}">
+  <meta name="theme-color" content="{{ siteData.color }}">
 
   {% if siteData.env === 'production' %}
-  <link rel="stylesheet" href="./styles/main.css">
+  <link rel="stylesheet" href="{{ '/styles/main.css' | url }}">
   {% endif %}
 
   <link rel="canonical" href="https://stevecherry.net/soundfont/">
 </head>
 <body class="font-sans flex flex-col min-h-screen m-0 bg-gray-100">
   <header class="flex items-center justify-between py-2 text-white bg-green-600 fixed w-full" role="banner">
-    <h1 class="text-xl my-0 ml-2">Soundfont</h1>
+    <h1 class="text-xl my-0 ml-2">{{ siteData.name | capitalize }}</h1>
 
     <nav class="mr-2" role="navigation">
       <ul class="flex list-none pl-0 my-0">
@@ -60,6 +60,6 @@
     <p>A <a class="text-inherit hover:text-green-600 focus:text-green-600" href="https://github.com/sccherry/soundfont">project</a> by <a class="text-inherit hover:text-green-600 focus:text-green-600" href="https://stevecherry.net">Steve Cherry</a>.</p>
   </footer>
 
-  <script src="./scripts/main.js" defer></script>
+  <script src="{{ '/scripts/main.js' | url }}" defer></script>
 </body>
 </html>
