--- a/src/_includes/components/envelope.njk
+++ b/src/_includes/components/envelope.njk
@@ -1,7 +1,5 @@
-<fieldset class="bg-white p-3 border border-solid border-gray-400 rounded">
-  <div class="text-xl font-bold">
-    <legend>Envelope</legend>
-  </div>
+<fieldset class="border-none m-0 p-0">
+  <legend class="text-xl font-bold">Envelope</legend>
 
   <div class="mt-4">
     <label class="block" for="envelope-attack">Attack</label>
