--- a/src/_includes/components/soundfont.njk
+++ b/src/_includes/components/soundfont.njk
@@ -1,7 +1,5 @@
-<fieldset class="border-0 border-none m-0 p-0">
-  <div class="text-xl font-bold">
-    <legend>Soundfont</legend>
-  </div>
+<fieldset class="border-none m-0 p-0">
+  <legend class="text-xl font-bold">Soundfont</legend>
 
   <div class="mt-4">
     <label class="block" for="soundfont">Soundfont</label>
