--- a/src/_includes/routes/index.njk
+++ b/src/_includes/routes/index.njk
@@ -1,1 +1,11 @@
-{% include "components/piano-roll.njk" %}
+<div class="sm:flex">
+  <div class="flex-auto">
+    <div class="p-3 border border-solid border-gray-400">
+      {% include "components/octave.njk" %}
+    </div>
+  </div>
+</div>
+
+<div class="mt-2">
+  {% include "components/piano-roll.njk" %}
+</div>
