--- a/src/_includes/routes/settings.njk
+++ b/src/_includes/routes/settings.njk
@@ -1,15 +1,13 @@
 <div class="sm:flex">
-  <div class="flex-auto sm:pr-1">
-    <div class="bg-white p-3 border border-solid border-gray-400 rounded">
-      {% include "components/octave.njk" %}
-    </div>
-
-    <div class="mt-2 bg-white p-3 border border-solid border-gray-400 rounded">
+  <div class="flex-auto">
+    <div class="p-3 border border-solid border-gray-400">
       {% include "components/soundfont.njk" %}
     </div>
   </div>
 
-  <div class="flex-auto pl-1-ns">
-    {% include "components/envelope.njk" %}
+  <div class="flex-auto mt-2 sm:pl-2 sm:mt-0">
+    <div class="p-3 border border-solid border-gray-400">
+      {% include "components/envelope.njk" %}
+    </div>
   </div>
 </div>
