Add state observable

--- a/src/index.njk
+++ b/src/index.njk
@@ -2,8 +2,10 @@
 layout: default.njk
 ---
 
-{% for route in routes %}
-  <div id="{{ route.path }}" class="view pt-16">
-    {% include "routes/" + route.path + ".njk" ignore missing %}
-  </div>
-{% endfor %}
+<form>
+  {% for route in routes %}
+    <div id="{{ route.path }}" class="view pt-16">
+      {% include "routes/" + route.path + ".njk" ignore missing %}
+    </div>
+  {% endfor %}
+</form>
