Update repo name

--- a/src/_layouts/default.njk
+++ b/src/_layouts/default.njk
@@ -57,7 +57,7 @@
   </main>
 
   <footer class="px-2 mt-2 border-0 border-t border-solid bg-white border-gray-400" role="contentinfo">
-    <p>A <a class="text-inherit hover:text-green-400 focus:text-green-400" href="https://github.com/sccherry/soundfont">project</a> by <a class="text-inherit hover:text-green-400 focus:text-green-400" href="https://stevecherry.net">Steve Cherry</a>.</p>
+    <p>A <a class="text-inherit hover:text-green-400 focus:text-green-400" href="https://github.com/ok-steve/soundfont">project</a> by <a class="text-inherit hover:text-green-400 focus:text-green-400" href="https://stevecherry.net">Steve Cherry</a>.</p>
   </footer>
 
   <script src="{{ '/scripts/main.js' | url }}" defer></script>
