--- a/src/_layouts/default.njk
+++ b/src/_layouts/default.njk
@@ -5,27 +5,27 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <title>{{ pkg.name | capitalize }}</title>
-    <meta name="description" content="{{ pkg.description }}">
+    <title>{{ title or site.name }} | {{ site.name }}</title>
+    <meta name="description" content="{{ pkg.description }}" />
 
-    <link rel="canonical" href="{{ pkg.author.url }}/{{ pkg.name }}{{ page.url }}">
+    <link rel="canonical" href="{{ page.url | htmlBaseUrl(pkg.author.url) }}" />
 
     <link
       rel="stylesheet"
       href="https://stevecherry.net/normcore/css/normcore.css"
     />
-    <link rel="stylesheet" href="{{ '/public/style.css' | url }}" />
+    <link rel="stylesheet" href="/public/style.css" />
 
     <script
       src="https://stevecherry.net/normcore/js/normcore.js"
       defer
     ></script>
-    <script src="{{ '/public/script.js' | url }}" type="module"></script>
+    <script src="/public/script.js" type="module"></script>
   </head>
   <body>
     <div class="cover stack">
       <header class="[ site-header ] [ cluster ] [ padding-01 ]" role="banner">
-        <h1 class="flex-auto">{{ pkg.name | capitalize }}</h1>
+        <h1 class="flex-auto">{{ site.name }}</h1>
 
         <nav role="navigation">
           <ul class="cluster" role="list">
@@ -42,7 +42,8 @@
         {{ content | safe }}
       </main>
 
-      <footer class="site-footer" role="contentinfo">
+      <footer class="[ site-footer ] [ stack ]" role="contentinfo">
+        <p>{{ pkg.description }}</p>
         <p>Yet another <a href="{{ pkg.homepage }}">project</a> by <a href="{{ pkg.author.url }}">{{ pkg.author.name }}</a>.</p>
       </footer>
     </div>
