--- a/src/_includes/routes/index.njk
+++ b/src/_includes/routes/index.njk
@@ -1,4 +1,4 @@
-<div class="[ stack ] [ border padding-01 ]">
+<div class="[ stack ] [ border pad-01 ]">
   {% include "components/octave.njk" %}
 </div>
 
