--- a/src/_layouts/default.njk
+++ b/src/_layouts/default.njk
@@ -20,7 +20,7 @@
   </head>
   <body>
     <div class="cover stack">
-      <header class="[ site-header ] [ cluster ] [ padding-01 ]" role="banner">
+      <header class="[ site-header ] [ cluster ] [ pad-01 ]" role="banner">
         <h1 class="flex-auto">{{ site.name }}</h1>
 
         <nav role="navigation">
