--- a/src/_includes/components/envelope.njk
+++ b/src/_includes/components/envelope.njk
@@ -3,9 +3,9 @@
 
   <div class="stack">
     {% for key, label in { attack: 'Attack', decay: 'Decay', sustain: 'Sustain', release: 'Release'} %}
-      <div class="field">
+      <div class="[ field ] [ cluster ]">
         <label for="envelope-{{ key }}">{{ label }}</label>
-        <input id="envelope-{{ key }}" type="range" name="envelope-{{ key }}" max="1" step="0.001" value="{{ initialState.envelope[key] }}">
+        <input id="envelope-{{ key }}" class="flex-auto" type="range" name="envelope-{{ key }}" max="1" step="0.001" value="{{ initialState.envelope[key] }}">
         <output for="envelope-{{ key }}">{{ initialState.envelope[key] }}</output>
       </div>
     {% endfor %}
