--- a/public/style.css
+++ b/public/style.css
@@ -1,15 +1,73 @@
-@charset "UTF-8";
+/* ---------------------------------- *\
+   #BASE
+\* ---------------------------------- */
 
 /**
- * Base
+ * Inherit box-sizing to allow easier overrides.
  */
 
-:root {
-  --grid-min: 15em;
+*,
+::before,
+::after {
+  box-sizing: inherit;
+}
+
+/**
+ * Reset all margins.
+ */
+
+* {
+  margin: 0;
+}
+
+/**
+ * Hide outline on non-keyboard focus.
+ */
+
+:focus:not(:focus-visible) {
+  outline: none;
+}
+
+/**
+ * 1. Use a better default box-sizing.
+ * 2. Set the vertical rhythm.
+ * 3. Prevent adjustments of font size after orientation changes in iOS.
+ */
+
+html {
+  box-sizing: border-box; /* 1 */
+  font-family: ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont,
+    "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue",
+    sans-serif;
+  font-size: 1em;
+  line-height: 1.5; /* 2 */
+  -webkit-text-size-adjust: 100%; /* 3 */
+  -moz-text-size-adjust: 100%; /* 3 */
+  text-size-adjust: 100%; /* 3 */
+}
+
+/**
+ * Smooth scroll, except for find on page.
+ */
+
+@media (prefers-reduced-motion: no-preference) {
+  html:focus-within {
+    scroll-behavior: smooth;
+  }
+}
+
+/**
+ * Only remove list styles with appropriate accessibility attributes.
+ */
+
+ul[role="list"] {
+  padding: 0;
+  list-style: none;
 }
 
 a {
   color: inherit;
+  text-decoration-skip-ink: auto;
 }
 
 a:hover,
@@ -18,20 +76,86 @@ a:focus {
 }
 
 label {
-  font-weight: bold;
+  display: block;
 }
 
 select {
   width: 100%;
 }
 
+/* ---------------------------------- *\
+   #COMPOSITION
+\* ---------------------------------- */
+
 /**
- * Utilities
+ * Cluster
+ */
+
+.cluster {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 0.75rem;
+}
+
+/**
+ * Cover
+ */
+
+.cover {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+}
+
+/**
+ * Grid
+ */
+
+.grid {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(15em, 1fr));
+  gap: 0.75rem;
+}
+
+/**
+ * Stack
+ */
+
+.stack > * + * {
+  margin-block-start: 1.5rem;
+}
+
+/* ---------------------------------- *\
+   #UTILITIES
+\* ---------------------------------- */
+
+/**
+ * Flex
+ */
+
+.flex-auto {
+  flex: auto;
+}
+
+/**
+ * Padding
+ */
+
+.p-01 {
+  padding: 0.75rem;
+}
+
+/**
+ * Border
  */
 
 .border {
   border: 1px solid;
 }
+
+/* ---------------------------------- *\
+   #BLOCKS
+\* ---------------------------------- */
 
 /**
  * Field
@@ -59,7 +183,7 @@ select {
   fill: currentColor;
 }
 
-.piano-roll [aria-pressed='true'],
+.piano-roll [aria-pressed="true"],
 .piano-roll-key:focus {
   color: #68d391;
 }
